--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tarot Terapéutico, Barras de Access y Sanación | Centaura</title>
+    <title>Tarot Terapéutico, Barras de Access y Sanación | Centaura.</title>
     <meta name="description" content="Lecturas de tarot terapeutico para sanación emocional y barras de Access, acompañándote en tu camino de autoconocimiento">
     <meta name="keywords" content="tarot terapeutico, barras de Access, yoga terapeutico, sanacion energetica, autoconocimiento, bienestar emocional">
     <link rel="canonical" href="https://www.tarotcentaura.com">
