se actualizo frontend

--- a/testimonios.html
+++ b/testimonios.html
@@ -49,14 +49,15 @@
     <input type="text" id="nombre" placeholder="Tu nombre (requerido)">
     <input type="text" id="instagram" placeholder="Tu Instagram (opcional)">
 
-    <!-- Estrellas -->
-    <div class="estrellas">
-      <span class="estrella" data-value="1">★</span>
-      <span class="estrella" data-value="2">★</span>
-      <span class="estrella" data-value="3">★</span>
-      <span class="estrella" data-value="4">★</span>
-      <span class="estrella" data-value="5">★</span>
-    </div>
+<div class="estrellas-selector">
+  <span class="estrella">★</span>
+  <span class="estrella">★</span>
+  <span class="estrella">★</span>
+  <span class="estrella">★</span>
+  <span class="estrella">★</span>
+</div>
+
+
 
     <button type="submit" disabled>Enviar ✨</button>
     <div id="mensaje-error" style="color: #f44336; margin-top: 0.5rem; display:none;"></div>
